--- a/wp-content/themes/assignment-4/style.css
+++ b/wp-content/themes/assignment-4/style.css
@@ -6,3 +6,9 @@ Template:       twentytwentythree
 
 (optional values you can add: Theme URI, Author URI, Version, License, License URI, Tags, Text Domain)
 */
+/* Body Styles */
+body {
+    font-family: "Arial", sans-serif;
+    background-color: #f9f9f9;
+    color: #333333;
+}
