add colour background

--- a/wp-content/themes/assignment-4/style.css
+++ b/wp-content/themes/assignment-4/style.css
@@ -9,6 +9,6 @@ Template:       twentytwentythree
 /* Body Styles */
 body {
     font-family: "Arial", sans-serif;
-    background-color: #f9f9f9;
+    background-color: #D2F7C8;
     color: #333333;
 }
